# finger_optimizer

./: .gitignore  3x4_Unique.npy  90degSprings.csv  AvailableSprings.csv  COutputConversion.py  LukeTest.py  MAXGRIP_dimensional_upper_triangular_6.12Lbf_0.125_0.4.S2  NullSpace_dimensional_upper_triangular_6.12Lbf_0.125_0.4.S  Optimizer.py  PhysicalUpperTriangularDimensional.S  PhysicalUpperTriangularDimensional2.S  PhysicalUpperTriangularDimensional3.S  PhysicalUpperTriangularDimensional4.S  Quad1Vol_dimensional_upper_triangular_6.12Lbf_0.125_0.4.S  Quad1Vol_dimensional_upper_triangular_6.12Lbf_0.125_0.4.S2  RESULTS.md  RadCond_dimensional_upper_triangular_6.12Lbf_0.125_0.4.S  TestbedFingers.py  allUnique3x4.npy  combinatorics.py  condition_dimensional_inherent.12Lbf_0.125_0.4.S2  cycloids.py  dimensional_upper_triangular_6.12Lbf_0.125_0.4.S  feasibility.py  finger.py  grasps.py  maxGrip_dimensional_Inherently Controllable.12Lbf_(0.125, 0.4)_20251103_1353.S  maxGrip_dimensional_Placeholder.12Lbf_(0.125, 0.4).S2  maxGrip_dimensional_inherent.12Lbf_(0, 0.4).S2  nullSpaceTests.py  package.xml  planetSpacing.py  posControlTests.py  possiblyControllableAlwaysDecouplable.npy  possiblyControllableDecouplable.npy  prev.smx  prev2.smx  prev3.smx  prove_controllability.py  quad1Vol_dimensional_Inherently Controllable.12Lbf_(0.125, 0.4)_20251103_1354.S  (+52 more)
Combinatorics/: chatBullshit.c  comb  comb2  combP  comb_parallel.c  combinatorics.c  combinatorics2.c  dump  expandedMatrix.c  expandedMatrix.h  expanded_math.c  fnv.c  fnv.h  hash.c  hash.h  linkTest  structureMatrix.c  test  test.c  (+11 more)
(+41 files in other folders)
