<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finger_optimizer</name>
  <version>0.0.0</version>
  <description>ROS Nodes for controlling a finger_optimizer NOT ROS</description>
  <maintainer email="ajbarcio@tamu.edu">radlab</maintainer>
  <license>If you've found this, you can have it</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- <exec_depend>finger_optimizer</exec_depend> -->
  <!-- <exec_depend>python3-scipy</exec_depend> -->
  <!-- <exec_depend>python3-cantools</exec_depend> -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
